--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.2.1
+  shared_preferences: ^2.2.3
+  
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +42,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -59,10 +64,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - Assets\Gradient Background.jpeg
-    - Assets\logo.png
-    - Assets\defaultPfp.png
-    - Assets\menu.png
+    - Assets/Gradient Background.jpeg
+    - Assets/logo.png
+    - Assets/defaultPfp.png
+    - Assets/menu.png
+    - Assets/down-arrow.png
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -79,14 +85,15 @@ flutter:
   fonts:
      - family: Nunito
        fonts:
-        - asset: Fonts\Nunito-Italic-VariableFont_wght.ttf
-        - asset: Fonts\Nunito-VariableFont_wght.ttf
+        - asset: Fonts/Nunito-Italic-VariableFont_wght.ttf
+        - asset: Fonts/Nunito-VariableFont_wght.ttf
           weight: 700
+          
      - family: Lato
        fonts:
-        - asset: Fonts\Lato\Lato-Black.ttf
-        - asset: Fonts\Lato\Lato-BlackItalic.ttf
-        - asset: Fonts\Lato\Lato-Bold.ttf
+        - asset: Fonts/Lato/Lato-Black.ttf
+        - asset: Fonts/Lato/Lato-BlackItalic.ttf
+        - asset: Fonts/Lato/Lato-Bold.ttf
         - weight: 700
 
   # For details regarding fonts from package dependencies,
