--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
   http: ^1.2.1
@@ -37,7 +38,6 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
@@ -95,6 +95,10 @@ flutter:
         - asset: Fonts/Lato/Lato-BlackItalic.ttf
         - asset: Fonts/Lato/Lato-Bold.ttf
         - weight: 700
+
+     - family: MaterialIcons
+       fonts:
+        - asset: Fonts\MaterialIcons-Regular.ttf
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
